...
                </ListGroup.ItemSuffix>
              </ListGroup.Item>
            </View>
          ))}
          <Separator className="mx-4" />
          <ListGroup.Item
            testID="drawer-create-org"
            onPress={() => {
              navigation.dispatch(DrawerActions.closeDrawer())
              setIsCreateOrgOpen(true)
            }}
          >
            <ListGroup.ItemPrefix>
...
